fixed content overlapping

--- a/chatbot.css
+++ b/chatbot.css
@@ -41,7 +41,7 @@ body{
    flex-direction: column;
    column-gap: 10px;
 
-   height: 90vh;
+   height: 80vh;
 }
 
 .input-container{
